<resources>
    <string name="app_name">NoteManagementSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Management System</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note</string>
    <string name="menu_editProfile">Edit Profile</string>
    <string name="menu_changePassword">Change Password</string>
    <string name="menu_account">Account</string>
</resources>